--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
     <h1>
         Figma를 활용한 모바일 웹 UI 제작 실습
     </h1>
+    <h2>
+        CLI 명령어
+    </h2>
+    <ul>
+        <li>ls</li>
+        <li>mkdir</li>
+        <li>cd</li>
+        <li>touch</li>
+        <li>rmdir</li>
+        <li>rm</li>
+       
+    </ul>
 </body>
 </html>
