--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@
         <li>rm</li>
         
     </ul>
-<<<<<<< HEAD
     <h3>Git 버전관리 활용</h3>
-=======
     <h2>Git 명령어</h2>
     <h2>한번 더 테스트</h2>
     
-    <h3>명령어 테스트 <
->>>>>>> 8e0bd9fad50b37184a618b24b2bc06447e033ab9
+    <h3>명령어 테스트 </h3>
 </body>
 </html>
